--- a/OsmAnd/res/values-nl/strings.xml
+++ b/OsmAnd/res/values-nl/strings.xml
@@ -382,23 +382,23 @@
   <string name="add_waypoint_dialog_added">Routepunt \'\'{0}\'\' succesvol toegevoegd</string>
   <string name="add_waypoint_dialog_title">Voeg routepunt toe aan de opgenomen GPX track</string>
   <string name="context_menu_item_add_waypoint">Voeg GPX routepunt toe</string>
-  <string name="amenity_type_administrative">Diensten</string>
-  <string name="amenity_type_barrier">Blokkade</string>
+  <string name="amenity_type_administrative">Gemeentehuis</string>
+  <string name="amenity_type_barrier">Wegversperring</string>
   <string name="amenity_type_education">Onderwijs</string>
   <string name="amenity_type_emergency">Noodgevallen</string>
-  <string name="amenity_type_entertainment">Entertainment</string>
-  <string name="amenity_type_finance">Financieel</string>
+  <string name="amenity_type_entertainment">Vermaak</string>
+  <string name="amenity_type_finance">Banken</string>
   <string name="amenity_type_geocache">Geocache</string>
-  <string name="amenity_type_healthcare">Gezondheidszorg</string>
+  <string name="amenity_type_healthcare">Medisch</string>
   <string name="amenity_type_historic">Historisch</string>
   <string name="amenity_type_landuse">Landgebruik</string>
   <string name="amenity_type_leisure">Vrije tijd</string>
-  <string name="amenity_type_manmade">Artificieel</string>
+  <string name="amenity_type_manmade">Gebouwen</string>
   <string name="amenity_type_military">Militair</string>
   <string name="amenity_type_natural">Natuur</string>
-  <string name="amenity_type_office">Kantoor</string>
+  <string name="amenity_type_office">Kantoren</string>
   <string name="amenity_type_other">Andere</string>
-  <string name="amenity_type_shop">Winkel</string>
+  <string name="amenity_type_shop">Winkels</string>
   <string name="amenity_type_sport">Sport</string>
   <string name="amenity_type_sustenance">Horeca</string>
   <string name="amenity_type_tourism">Toerisme</string>
